site plan revisions

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chamber of Commerce Site Plan</title>
     <meta name="description" content="Site plan for future Chamber of Commerce Site">
     <meta name="author" content="Sariah Wandler">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,40 +32,41 @@
         </section>
         <section id="palette">
             <h2>Color Schema</h2>
-            <section id="main">
+            <div id="main">
                 <h3>Olivine<br>85b581</h3>
                 <p>The Main Color</p>
-            </section>
-            <section id="accent">
+            </div>
+            <div id="accent">
                 <h3>Dark Purple<br>391126</h3>
                 <p>The Accent Color</p>
-            </section>
-            <section id="font">
+            </div>
+            <div id="font">
                 <h3>Black<br>000000</h3>
                 <p>Main Color of the Font</p>
-            </section>
-            <section id="background">
+            </div>
+            <div id="background">
                 <h3>Light Grey<br>f2f3f7</h3>
                 <p>Secondary Font Color and Background</p>
-            </section>
+            </div>
         </section>
         <section>
             <h2>Typography</h2>
             <ul>
                 <li>
-                    <h1>Page Headings</h1>
+                    <h3>Page Headings</h3>
                 </li>
             <li>
                 <h2>Section Headings</h2>
             </li>
             <li>Details</li>
+            </ul>
         </section>
         <section>
             <h2>WireFrames</h2>
-            <section id="wireframe">
+            <div id="wireframe">
                 <img src="images/mobile.jpeg" alt="mobile wireframe">
                 <img src="images/large.jpeg" alt="large wireframe">
-            </section>      
+            </div>      
         </section>
     </main>
     <footer></footer>
