--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">Chamber</a></li>
-            <li><a href="chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>   
     </nav>
