--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -53,7 +53,7 @@
             <h2>Typography</h2>
             <ul>
                 <li>
-                    <h3>Page Headings</h3>
+                    <h3 id="heading">Page Headings</h3>
                 </li>
             <li>
                 <h2>Section Headings</h2>
