--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         <img src="images/profile.jpg" alt="Sariah Wandler Profile" width="75" height="100">
         <span>Sariah Wandler</span>
     </header>
+    <button id="menu"></button>
     <nav>
-        <ul>
+        <ul id="navigation">
             <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>   
     </nav>
     <main>
+        <button id="dark"></button>
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
@@ -64,5 +66,7 @@
         <p>Last Modified:</p>
     </footer>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/showmenu.js"></script>
+    <script src="scripts/darkmode.js"></script>
 </body>
 </html>
