Fix homepage errors

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,18 +9,19 @@
     <link rel="icon" href="anaconda.ico">
     <meta property="og:title" content="Anaconda Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="images/hero.jpg">
     <meta property="og:url" content="https://wandwell.github.io/wdd230/chamber">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Manjari:wght@100;400;700&family=Sahitya:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
    <header>
-    <img class="logo" src="images/logo.jpg" alt="logo for Anaconda Chamber of Commerce" height="100px" width="100px" >
-    <h2>Anaconda<br> Chamber of Commerce</h2>
+    <img class="logo" src="images/logo.jpg" alt="logo for Anaconda Chamber of Commerce" height="100" width="100" >
+    <h1>Anaconda<br> Chamber of Commerce</h1>
     <ul class="social"></ul>
    </header>
    <nav>
@@ -41,7 +42,7 @@
         </ul>
    </nav>
    <main>
-        <img class="hero" src="images/hero.jpg" alt="Picture of (old) Anaconda City Hall">
+        <img class="hero" src="images/hero.jpg" alt="Picture of (old) Anaconda City Hall" width="1200" height="800">
         <button id="action">Join Our community Today!</button>
         <section>
             <h2>Current Events</h2>
@@ -72,7 +73,7 @@
         </section>
    </main> 
    <footer>
-        <img class="logo" src="images/logo.jpg" alt="Logo of Anaconda Chamber of Commerce">
+        <img class="logo" src="images/logo.jpg" alt="Logo of Anaconda Chamber of Commerce" width="100" height="100">
         <h2>Anaconda Chamber of Commerce</h2>
         <section class="contact">
             <p>Email: </p>
