--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="anaconda.ico">
     <meta property="og:title" content="Anaconda Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/hero.jpg">
+    <meta property="og:image" content="https://wandwell.github.io/wdd230/chamber/images/hero.jpg">
     <meta property="og:url" content="https://wandwell.github.io/wdd230/chamber">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
