--- a/chamber/index.html
+++ b/chamber/index.html
@@ -87,5 +87,6 @@
         </section>
     </footer>   
     <script src="scripts/menu.js"></script>
+    <script src="scripts/getdates.js"></script>
 </body>
 </html>
