week 3 learning activities

--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
                     <a href="https://codepen.io/wandwell/pen/bGXQZGg">Hamburger Menu</a> | 
                     <a href="week02/bom.html">BoM JS Activity</a>
                 </li>
-                <li>Week 3:</li>
+                <li>Week 3: 
+                    <a href="week03/images/landscape.webp">WebP</a> | 
+                    <a href="week03/lazyload.html">Lazy Loading</a> | 
+                    <a href="week03/responsive-images.html">Responsive Images</a>
+                </li>
                 <li>Week 4:</li>
                 <li>Week 5:</li>
                 <li>Week 6:</li>
