--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile.jpg" alt="Sariah Wandler Profile" width="75" height="100">
+        <img src="images/profile.webp" alt="Sariah Wandler Profile" width="75" height="100">
         <span>Sariah Wandler</span>
     </header>
     <button id="menu"></button>
@@ -36,6 +36,12 @@
     <main>
         <button id="dark"></button>
         <h1>WDD 230: Web Frontend Development</h1>
+        <div class="hero">
+            <picture>
+                <source  srcset="images/hero-small.webp" media="(max-width: 500px)">
+                <img src="images/hero.webp" alt="Montevideo Uruguay Temple" loading="lazy" width="960" height="480">
+            </picture>
+        </div>
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
@@ -52,7 +58,8 @@
                 <li>Week 3: 
                     <a href="week03/images/landscape.webp">WebP</a> | 
                     <a href="week03/lazyload.html">Lazy Loading</a> | 
-                    <a href="week03/responsive-images.html">Responsive Images</a>
+                    <a href="week03/responsive-images.html">Responsive Images</a> | 
+                    <a href="week03/bom.html">BOM JSON Activity</a>
                 </li>
                 <li>Week 4:</li>
                 <li>Week 5:</li>
@@ -62,15 +69,17 @@
         <section class="card">
             <h2>Information</h2>
             <h3>Weather</h3>
-            <h3>Number of visits to page:</h3>
+            <h3 class="visits">Number of visits to page:</h3>
         </section>
     </main>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22119.230191759507!2d-112.94773122715479!3d46.132746630728874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535b90c4e45108f7%3A0xf6cc14779c4f0f62!2sWashoe%20Park!5e0!3m2!1sen!2sus!4v1731855807827!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer>
-        <p>&copy;<span id="year"></span> <br>| Sariah Wandler |<br> Montana <img src="images/flag.jpg" alt="Montana Flag" width="50" height="38"></p>
+        <p>&copy;<span id="year"></span> <br>| Sariah Wandler |<br> Montana <img src="images/flag.webp" alt="Montana Flag" loading="lazy" width="50" height="38"></p>
         <p>Last Modified:</p>
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/showmenu.js"></script>
     <script src="scripts/darkmode.js"></script>
+    <script src="scripts/countvisits.js"></script>
 </body>
 </html>
