fix discover pae errors

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anaconda Chamber of Commerce</title>
-    <meta name="description" content="Chamber of Commerce Project for WDD230">
+    <title>Anaconda Chamber of Commerce - Discover</title>
+    <meta name="description" content="Discover Page for the Chamber of Commerce Project for WDD230">
     <meta name="author" content="Sariah Wandler">
     <link rel="icon" href="anaconda.ico">
     <meta property="og:title" content="Anaconda Chamber of Commerce">
@@ -24,13 +24,13 @@
     <h1>Anaconda<br> Chamber of Commerce</h1>
     <div class="social">
         <a href="https://www.facebook.com/">
-            <img src="images/facebook.webp" alt="facebook logo">
+            <img src="images/facebook.webp" alt="facebook logo" width="25" height="25">
         </a>
         <a href="https://www.instagram.com/">
-            <img src="images/instagram.webp" alt="instagram logo">
+            <img src="images/instagram.webp" alt="instagram logo" width="25" height="25">
         </a>
         <a href="https://x.com/home">
-            <img src="images/x-social.webp" alt="X social media logo">
+            <img src="images/x-social.webp" alt="X social media logo" width="25" height="25">
         </a>
     </div>
    </header>
@@ -91,13 +91,13 @@
         </div>
         <div class="social">
             <a href="https://www.facebook.com/">
-                <img src="images/facebook.webp" alt="facebook logo">
+                <img src="images/facebook.webp" alt="facebook logo" width="25" height="25">
             </a>
             <a href="https://www.instagram.com/">
-                <img src="images/instagram.webp" alt="instagram logo">
+                <img src="images/instagram.webp" alt="instagram logo" width="25" height="25">
             </a>
             <a href="https://x.com/home">
-                <img src="images/x-social.webp" alt="X social media logo">
+                <img src="images/x-social.webp" alt="X social media logo" width="25" height="25">
             </a>
         </div>
         <div class='copyright'>
