--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,13 +24,13 @@
     <h1>Anaconda<br> Chamber of Commerce</h1>
     <div class="social">
         <a href="https://www.facebook.com/">
-            <img src="images/facebook.webp" alt="facebook logo">
+            <img src="images/facebook.webp" alt="facebook logo" width="25" height="25">
         </a>
         <a href="https://www.instagram.com/">
-            <img src="images/instagram.webp" alt="instagram logo">
+            <img src="images/instagram.webp" alt="instagram logo" width="25" height="25">
         </a>
         <a href="https://x.com/home">
-            <img src="images/x-social.webp" alt="X social media logo">
+            <img src="images/x-social.webp" alt="X social media logo" width="25" height="25">
         </a>
     </div>
    </header>
@@ -105,13 +105,13 @@
         </div>
         <div class="social">
             <a href="https://www.facebook.com/">
-                <img src="images/facebook.webp" alt="facebook logo">
+                <img src="images/facebook.webp" alt="facebook logo" width="25" height="25">
             </a>
             <a href="https://www.instagram.com/">
-                <img src="images/instagram.webp" alt="instagram logo">
+                <img src="images/instagram.webp" alt="instagram logo" width="25" height="25">
             </a>
             <a href="https://x.com/home">
-                <img src="images/x-social.webp" alt="X social media logo">
+                <img src="images/x-social.webp" alt="X social media logo" width="25" height="25">
             </a>
         </div>
         <div class='copyright'>
