--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <picture>
                 <source  srcset="images/hero-small.webp" media="(max-width: 500px)">
                 <img src="images/hero.webp" alt="Montevideo Uruguay Temple" loading="lazy" width="960" height="480">
+                <p class="hero-label">Montevideo<br>Uruguay<br>Temple</p>
             </picture>
         </div>
         <section class="card">
