week 4 learning activities

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
                     <a href="week03/responsive-images.html">Responsive Images</a> | 
                     <a href="week03/bom.html">BOM JSON Activity</a>
                 </li>
-                <li>Week 4:</li>
+                <li>Week 4:
+                    <a href="https://codepen.io/wandwell/pen/qEWWYRX">Psuedo Pen</a> | 
+                    <a href="week04/images/combinators.webp">Combinators</a> | 
+                    <a href="week04/tablebuild.html">Table</a> | 
+                    <a href="week04/Form-start/index.html">Form Activity</a>
+                </li>
                 <li>Week 5:</li>
                 <li>Week 6:</li>
             </ul>
