--- a/record.html
+++ b/record.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 230 Form</title>
-    <meta name="description" content="Form design for WDD230">
+    <meta name="description" content="Form recorded for WDD230">
     <meta name="author" content="Sariah Wandler">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
