Add form to chamber page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -47,7 +47,7 @@
                 <a href="#">Directory</a>
             </li>
             <li>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </li>
         </ul>
    </nav>
