--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,7 @@
                 <a href="#">Directory</a>
             </li>
             <li>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
             </li>
         </ul>
    </nav>
