--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -51,49 +51,9 @@
             </li>
         </ul>
    </nav>
-   <main>
-        <div class="hero">
-            <picture>
-                <source srcset="images/hero-small.webp" media="(max-width: 500px)">
-                <img src="images/hero.webp" alt="Picture of (old) Anaconda City Hall" width="1200" height="600">
-            </picture>
-            <button id="action">Join Our Community Today!</button>
-        </div>
-        <section>
-            <h2>Upcoming Events</h2>
-            <ul>
-                <li>
-                    <h3>December 7 - Anaconda Christmas Stroll</h3>
-                    <p>The Anaconda Christmas Stroll is an annual holiday event where Anaconda's Main Street comes alive with festive lights, holiday decorations, and the sounds of carolers. Local shops stay open late for special deals, and the streets are filled with holiday cheer, including a visit from Santa Claus.</p>
-                </li>
-                <li>
-                    <h3>December 20 - Anaconda Winter Festival</h3>
-                    <p> Held at Washoe park, the festival is a fun, active event for all ages. With holiday-themed contests and crafts like ice-carving, snowman building, and ornament creation, your sure to bring something home for grandma. Local vendors serve up warm treats like hot cocoa and roasted chestnuts.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Weather</h2>
-            <p>This is the weather</p>
-        </section>
-        <section id="spotlight">
-            <h2>Business Spotlight</h2>
-            <div>
-                <h3 class="name">Big Sky Outdoor Gear Co.</h3>
-                <p class ="description">From hiking and camping gear to ski equipment and fishing supplies, Big Sky Outdoor Gear Co. specializes in durable, weather-resistant products. We also offers guided tours, gear rentals, and workshops.</p>
-                <p class="contact">123 Main Street<br>(406)555-0123</p>
-            </div>
-            <div>
-                <h3 class="name">The Rustic Candle Co.</h3>
-                <p class ="description"> An artisan candle-making business that specializes in hand-poured candles inspired by Montana’s landscapes and seasons, we use local, natural ingredients to create unique scents of Big Sky Country.</p>
-                <p class="contact">456 Oak Avenue<br>(406)555-0456</p>
-            </div>
-            <div>
-                <h3 class="name">Wildflower Market & Deli</h3>
-                <p class ="description">A cozy, neighborhood grocery and sandwich shop that focuses on fresh ingredients, we serves hearty sandwiches, soups, and baked goods. We also host weekly farmers' markets and offer cooking classes focused on local produce.</p>
-                <p class="contact">101 Birch Lane<br>(406)555-0789</p>
-            </div>
-        </section>
+   <main class="thanks">
+    <div><h2>Thank you for Joining Our Community!</h2></div>
+        
    </main> 
    <footer>
         <img class="logo" src="images/logo.webp" alt="Logo of Anaconda Chamber of Commerce" width="100" height="100">
