--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anaconda Chamber of Commerce</title>
-    <meta name="description" content="Chamber of Commerce Project for WDD230">
+    <title>Anaconda Chamber of Commerce - Join</title>
+    <meta name="description" content="Chamber of Commerce Join page">
     <meta name="author" content="Sariah Wandler">
     <link rel="icon" href="anaconda.ico">
     <meta property="og:title" content="Anaconda Chamber of Commerce">
