--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <section class="card">
             <h2>Learning Activities</h2>
-            <ul>
+            <ul id="learning">
                 <li>Week 1:
                     <a href="week01/holygrail.html">Layout</a> | 
                     <a href="week01/media-query.html">Media Query</a> | 
@@ -63,18 +63,23 @@
                     <a href="week03/bom.html">BOM JSON Activity</a>
                 </li>
                 <li>Week 4:
-                    <a href="https://codepen.io/wandwell/pen/qEWWYRX">Psuedo Pen</a> | 
+                    <a href="https://codepen.io/wandwell/pen/qEWWYRX">Psuedo Class Pen</a> | 
                     <a href="week04/images/combinators.webp">Combinators</a> | 
                     <a href="week04/tablebuild.html">Table</a> | 
                     <a href="week04/Form-start/index.html">Form Activity</a>
                 </li>
-                <li>Week 5:</li>
+                <li>Week 5:
+                    <a href="https://codepen.io/wandwell/pen/XJrbQdG">Psuedo Element Pen</a> | 
+                    <a href="week05/new-ward-members.json">JSON</a> | 
+                    <a href="week05/prophets.html">Prophets</a> | 
+                    <a href="week05/weather.html">Weather</a>
+                </li>
                 <li>Week 6:</li>
             </ul>
         </section>
         <section class="card">
             <h2>Information</h2>
-            <h3>Weather</h3>
+            <div id="weather"></div>
             <h3 class="visits">Number of visits to page:</h3>
         </section>
     </main>
@@ -87,5 +92,6 @@
     <script src="scripts/showmenu.js"></script>
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/countvisits.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 </html>
