--- a/index.html
+++ b/index.html
@@ -45,37 +45,7 @@
         </div>
         <section class="card">
             <h2>Learning Activities</h2>
-            <ul id="learning">
-                <li>Week 1:
-                    <a href="week01/holygrail.html">Layout</a> | 
-                    <a href="week01/media-query.html">Media Query</a> | 
-                    <a href="https://codepen.io/wandwell/pen/gOVKZZr">JS Pen</a>
-                </li>
-                <li>Week 2:
-                    <a href="week02/design.html">Design</a> | 
-                    <a href="https://codepen.io/wandwell/pen/bGXQZGg">Hamburger Menu</a> | 
-                    <a href="week02/bom.html">BoM JS Activity</a>
-                </li>
-                <li>Week 3: 
-                    <a href="week03/images/landscape.webp">WebP</a> | 
-                    <a href="week03/lazyload.html">Lazy Loading</a> | 
-                    <a href="week03/responsive-images.html">Responsive Images</a> | 
-                    <a href="week03/bom.html">BOM JSON Activity</a>
-                </li>
-                <li>Week 4:
-                    <a href="https://codepen.io/wandwell/pen/qEWWYRX">Psuedo Class Pen</a> | 
-                    <a href="week04/images/combinators.webp">Combinators</a> | 
-                    <a href="week04/tablebuild.html">Table</a> | 
-                    <a href="week04/Form-start/index.html">Form Activity</a>
-                </li>
-                <li>Week 5:
-                    <a href="https://codepen.io/wandwell/pen/XJrbQdG">Psuedo Element Pen</a> | 
-                    <a href="week05/new-ward-members.json">JSON</a> | 
-                    <a href="week05/prophets.html">Prophets</a> | 
-                    <a href="week05/weather.html">Weather</a>
-                </li>
-                <li>Week 6:</li>
-            </ul>
+            <ul id="learning"></ul>
         </section>
         <section class="card">
             <h2>Information</h2>
