add links script

--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/countvisits.js"></script>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 </html>
