fix error on join page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -66,6 +66,7 @@
             </fieldset>
             <fieldset>
                 <legend>Business Information</legend>
+                <label>Name of Business<input type="text" name="business" id="business" required></label>
                 <div>Membership Level</div>
                 <label><input type="radio" name="membership" value="np">Non-Profit</label>
                 <label><input type="radio" name="membership" value="bronze">Bronze</label>
