--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -80,5 +80,6 @@
     </footer>   
     <script src="scripts/menu.js"></script>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/directory.js"></script>
 </body>
 </html>
