--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -52,7 +52,10 @@
         </ul>
    </nav>
    <main id="directory">
-    <h2>Member Directory</h2>
+        <h2>Member Directory</h2>
+        <div>
+            <button class="view">⏹️ Grid / 📃 List</button>
+        </div>
    </main> 
    <footer>
         <img class="logo" src="images/logo.webp" alt="Logo of Anaconda Chamber of Commerce" width="100" height="100">
@@ -81,5 +84,6 @@
     <script src="scripts/menu.js"></script>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/directory.js"></script>
+    <script src="scripts/gridmenu.js"></script>
 </body>
 </html>
