--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,13 +38,13 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li>
-                <a class="active" href="#">Home</a>
+                <a href="#">Home</a>
             </li>
             <li>
                 <a href="discover.html">Discover</a>
             </li>
             <li>
-                <a href="#">Directory</a>
+                <a class="active" href="#">Directory</a>
             </li>
             <li>
                 <a href="join.html">Join</a>
