--- a/chamber/join.html
+++ b/chamber/join.html
@@ -44,7 +44,7 @@
                 <a href="discover.html">Discover</a>
             </li>
             <li>
-                <a href="#">Directory</a>
+                <a href="directory.html">Directory</a>
             </li>
             <li>
                 <a class=active href="#">Join</a>
