--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -38,16 +38,16 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li>
-                <a class="active" href="#">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
                 <a href="discover.html">Discover</a>
             </li>
             <li>
-                <a href="#">Directory</a>
+                <a href="directory.html">Directory</a>
             </li>
             <li>
-                <a href="#">Join</a>
+                <a class="active" href="join.html">Join</a>
             </li>
         </ul>
    </nav>
