--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,7 +44,7 @@
                 <a class="active" href="#">Discover</a>
             </li>
             <li>
-                <a href="#">Directory</a>
+                <a href="directory.html">Directory</a>
             </li>
             <li>
                 <a href="join.html">Join</a>
