--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
         <button id="menu"></button>
         <ul class="navigation">
             <li>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
                 <a href="discover.html">Discover</a>
